# OpenGCC_Firmware

./: CMakeLists.txt  CONTRIBUTING.md  Doxyfile  OpenGCC.cmake  README.md
.github/ISSUE_TEMPLATE/: controller-support.md  feature.md
.github/workflows/: build_opengcc.yml
controllers/NobGCC/rev1/: CMakeLists.txt  config.hpp  controller.cpp  controller.hpp  rev1.cpp  rev1.hpp
controllers/PhobGCC/: CMakeLists.txt  PhobGCC.cpp  PhobGCC.hpp  config.hpp  controller.cpp  controller.hpp
opengcc/: CMakeLists.txt  analog_controller.hpp  calibration.cpp  calibration.hpp  configuration.cpp  configuration.hpp  controller.hpp  curve_fitting.hpp  curve_fitting.tpp  joybus.cpp  joybus.hpp  main.cpp  main.hpp  state.cpp  state.hpp
opengcc/pio/: joybus.pio  single_pin_joybus.pio
src/: Configuration.cpp  Q2x14.cpp  board.cpp  board.hpp  calibration.cpp  calibration.hpp  common.h  common.hpp  configuration.cpp  configuration.hpp  console_communication.cpp  console_communication.hpp  curve_fitting.cpp  curve_fitting.hpp  curve_fitting.tpp  joybus.cpp  joybus.hpp  joybus_uf2.cpp  joybus_uf2.hpp  joybus_uf2_bootloader.cpp  joybus_uf2_bootloader.hpp  main.cpp  main.hpp  nob_gcc.cpp  nob_gcc.hpp  q2x14.hpp  state.cpp  state.hpp
src/pio/: joybus.pio  read_pwm.pio
